{
    "name": "IA_Gameplay",
    "maps": [
        {
            "name": "Gameplay",
            "id": "d627e558-9439-4e5a-b72a-09732f0bcb24",
            "actions": [
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "215758e6-34c5-4bf2-ac9c-81ff929ba4d5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "27847f72-1221-45a6-af5b-fb673a22053c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "f286a0fc-3ad2-4e86-a838-b8ed11212458",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1c9f4d6c-fb49-4d8d-ba31-c7d4549d8db5",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7dd5ec7c-b0cb-40b7-a6c8-3fb204ce62c4",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7a8f48b9-4838-4dd2-84b5-95c545b4eb6e",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}